--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <h3>Manage Products</h3>
             <div class="row admin-products"></div>
             <div class="admin-controls mb-4">
-                <h3>Reports Dashboard</h3>
+                <h3>Admin Operations</h3>
                 
             </div>
         </div>
